--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -16,10 +16,12 @@
 .products {
   flex: 1;
   flex-direction: column;
+  padding-bottom: 50px;
 }
 
 .item {
   flex-direction: column;
+  margin-bottom: 2px;
 }
 
 .topHeader {
@@ -60,4 +62,95 @@
 .distance span {
   color: #888;
   font-weight: 700;
+}
+
+.image {
+  width: 100%;
+  height: 260px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.imageDetails {
+  display: flex;
+  flex-direction: row;
+  height: 260px;
+  width: 100%;
+  position: absolute;
+  align-items: flex-end;
+  bottom: 0;
+  left: 0;
+  background: rgba(255,255,255,0);
+  background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(99,99,99,0) 61%, rgba(0,0,0,0.61) 100%);
+}
+
+.name {
+  flex: 2;
+  padding: 8px 14px;
+}
+.name p {
+  padding: 0;
+  margin: 0;
+  color: #FFF;
+  font-size: .8em;
+  padding-bottom: 2px;
+}
+.name p strong {
+  font-weight: 700;
+}
+.share {
+  flex: 1;
+  text-align: right;
+  padding: 8px 14px;
+  padding-bottom: .8em;
+}
+
+.icon {
+  color: #FFF;
+  font-size: 1.5em;
+  padding-right: .2em;
+}
+.heart {
+  color: #333;
+  font-size: 1.4em;
+  -webkit-text-stroke: 1px #FFF;
+}
+
+.likes {
+  background-color: #FFF;
+  padding: 10px 12px;
+  composes: blueFont from 'colors.css';
+  font-size: .9em;
+  font-weight: 700;
+}
+
+.likeIcon {
+  composes: blueFont from 'colors.css';
+  font-size: 1.1em;
+}
+
+.comments {
+  background-color: #FFF;
+  padding: 0 12px 10px 12px;
+  color: #666;
+}
+.commentText {
+  margin: 0;
+  font-size: .8em;
+  padding-bottom: 2px;
+}
+.hash {
+  font-size: .8em;
+  margin: 0;
+  composes: blueFont from 'colors.css';
+}
+.morelink {
+  composes: commentText;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  font-size: .75em;
+  display: flex;
+  color: #999;
 }
