--- a/src/styles/components/bottom-navigation.css
+++ b/src/styles/components/bottom-navigation.css
@@ -8,13 +8,23 @@
   position: fixed;
   bottom: 0;
   left: 0;
-  box-shadow: 0 0 3px #999;
+  /*box-shadow: 0 0 2px #555;*/
+  z-index: 1020;
 }
 
 .links {
   flex-grow: 1;
   text-align: center;
 }
+.searchLink {
+  color: #FFF;
+  text-decoration: none;
+  font-size: 1.3em;
+  display: block;
+  margin: 0;
+  padding-top: 13px;
+}
+
 a.links:link, a.links:visited {
   color: #FFF;
   text-decoration: none;
@@ -23,7 +33,7 @@ a.links:link, a.links:visited {
   padding-top: 13px;
 }
 
-a.links:hover, a.links:active {
+a.links:hover {
   background-color: #ed508a;
 }
 
