--- a/src/styles/components/product.css
+++ b/src/styles/components/product.css
@@ -45,6 +45,7 @@
 
 .productImg {
   position: relative;
+  cursor: pointer;
 }
 
 .image {
@@ -54,7 +55,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
-  z-index: 1100;
 }
 
 .imageDetails {
@@ -66,7 +66,6 @@
   align-items: flex-end;
   bottom: 0;
   left: 0;
-  z-index: 1200;
   background: rgba(255,255,255,0);
   background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(99,99,99,0) 10%, rgba(0,0,0,0.71) 100%);
 }
